# Fahren-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Editor/: CMakeLists.txt  imgui.ini
Editor/assets/scenes/: 3DExample.fahren  Example.fahren  physicsScene.fahren
Editor/assets/shaders/: flatColor.glsl  standardShader.glsl  standardShaderCircle.glsl  standardShaderLine.glsl  standardShaderQuad.glsl
Editor/src/: editorApp.cpp  editorLayer.cpp  editorLayer.h
Editor/src/panels/: contentBrowserPanel.cpp  contentBrowserPanel.h  sceneHierarchyPanel.cpp  sceneHierarchyPanel.h
Fahren/: CMakeLists.txt
Fahren/requisites/GLAD/src/: glad.c
Fahren/requisites/imguizmo/: ImGuizmo.cpp
Fahren/requisites/stb_image/: stb_image.cpp
Fahren/src/: Fahren.h  fhpch.h
Fahren/src/Engine/core/: UUID.cpp  UUID.h  application.cpp  application.h  assert.h  base.h  entryPoint.h  input.h  keyCodes.h  layer.cpp  layer.h  layerStack.cpp  layerStack.h  log.cpp  log.h  mouseCodes.h  timer.h  timestep.h  window.h
Fahren/src/Engine/debug/: instrumentor.h
Fahren/src/Engine/events/: events.h  keyEvent.h  mouseEvent.h
Fahren/src/Engine/imGui/: imGuiBuild.cpp  imGuiLayer.cpp  imGuiLayer.h
Fahren/src/Engine/math/: math.cpp  math.h
Fahren/src/Engine/renderer/: buffer.cpp  buffer.h  camera.h  editorCamera.cpp  editorCamera.h  frameBuffer.cpp  frameBuffer.h  graphicsContext.cpp  graphicsContext.h  orthographicCamera.cpp  orthographicCamera.h  orthographicCameraController.cpp  orthographicCameraController.h  renderCommand.cpp  renderCommand.h  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  texture.cpp  texture.h  uniformBuffer.cpp  uniformBuffer.h  vertexArray.cpp  vertexArray.h
Fahren/src/Engine/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h  sceneCamera.cpp  sceneCamera.h  sceneSerializer.cpp  sceneSerializer.h  scriptableEntity.h
Fahren/src/Engine/utils/: platformUtils.h
Fahren/src/Platform/OpenGL/: openGLBuffer.cpp  openGLBuffer.h  openGLContext.cpp  openGLContext.h  openGLFrameBuffer.cpp  openGLFrameBuffer.h  openGLRendererAPI.cpp  openGLRendererAPI.h  openGLShader.cpp  openGLShader.h  openGLTexture.cpp  openGLTexture.h  openGLUniformBuffer.cpp  openGLUniformBuffer.h  openGLVertexArray.cpp  openGLVertexArray.h
Fahren/src/Platform/Vulkan/: vulkanBuffer.cpp  vulkanBuffer.h  vulkanCommandBuffer.cpp  vulkanCommandBuffer.h  vulkanContext.cpp  vulkanContext.h  vulkanDevice.cpp  vulkanDevice.h  vulkanFrameBuffer.cpp  vulkanFrameBuffer.h  vulkanMemoryAllocator.cpp  vulkanMemoryAllocator.h  vulkanRenderPass.cpp  vulkanRenderPass.h  vulkanRendererAPI.cpp  vulkanRendererAPI.h  vulkanShader.cpp  vulkanShader.h  vulkanSwapChain.cpp  vulkanSwapChain.h  vulkanSync.cpp  vulkanSync.h  vulkanUtils.cpp  vulkanUtils.h
Fahren/src/Platform/linux/: linuxPlatformUtils.cpp
Fahren/src/Platform/windows/: windowInput.cpp  windowInput.h  windowWindow.cpp  windowWindow.h  windowsPlatformUtils.cpp
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: texture.glsl
Sandbox/src/: sandbox2D.cpp  sandbox2D.h  sandboxApp.cpp
Scripts/windows/: Setup.bat  Setup.py  Utils.py  Vulkan.py
requisites/GLAD/include/glad/: glad.h
sandbox/: CMakeLists.txt
sandbox/src/: sandboxApp.cpp
src/: Fahren.h  fhpch.h  main.cpp
src/Engine/core/: application.cpp  application.h  input.h  layer.h  layerStack.cpp  layerStack.h  log.cpp  log.h  window.h
src/Engine/events/: applicationEvent.h  events.h  keyEvent.h  mouseEvent.h
src/Engine/imGui/: imGuiBuild.cpp  imGuiLayer.cpp  imGuiLayer.h
src/Engine/renderer/: buffer.cpp  buffer.h  graphicsContext.h  renderCommand.cpp  renderer.cpp  renderer.h  rendererAPI.cpp  rendererAPI.h  shader.h  vertexArray.cpp
src/Platform/OpenGL/: imGuiOpenGLRenderer.cpp  openGLBuffer.cpp  openGLBuffer.h  openGLContext.cpp  openGLVertexArray.h
src/Platform/windows/: linuxWindow.cpp  linuxWindow.h  windowInput.h  windowWindow.cpp  windowWindow.h
